Removed unncessary content and fixed website on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -389,7 +389,9 @@ nav .fa-solid{
 }
 
 @media only screen and (max-width: 600px){
-
+    #header {
+        height: 50%;
+    }
     .presentation-col-2{
         margin-top: 100px;
         height: 400px;
@@ -438,6 +440,77 @@ nav .fa-solid{
     .about-col-2{
         padding: 20px 20px;
         font-size: 14px;
+    }
+    .services-list div h2 {
+        font-size: 20px;
+        font-weight: 500 px;
+        margin-bottom: 15px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .footer p{
+        font-size: 14px;
+    }
+}
+@media all and (max-width: 1000px) and (orientation:portrait) 
+{
+    #header {
+        height: 50%;
+    }
+    .presentation-col-2{
+        margin-top: 100px;
+        height: 400px;
+    }
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #101010;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px; 
+    } 
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 10px;
+    }
+    .about-col-2{
+        padding: 20px 20px;
+        font-size: 14px;
+    }
+    .services-list div h2 {
+        font-size: 20px;
+        font-weight: 500 px;
+        margin-bottom: 15px;
     }
     .contact-left, .contact-right{
         flex-basis: 100%;
